--- a/src/main/resources/dialog/history_static_tab_frame.fxml
+++ b/src/main/resources/dialog/history_static_tab_frame.fxml
@@ -24,7 +24,7 @@
              <Label layoutX="86.0" layoutY="319.0" prefHeight="24.0" prefWidth="156.0" />
              <TableView fx:id="tableTeamStatic" layoutX="30.0" layoutY="105.0" prefHeight="601.0" prefWidth="569.0">
                 <columns>
-                   <TableColumn fx:id="lmName" prefWidth="79.0" text="所属联盟" />
+                   <TableColumn fx:id="teamClubId" prefWidth="79.0" text="所属俱乐部" />
                    <TableColumn fx:id="teamId" minWidth="0.0" prefWidth="49.0" text="团队ID" />
                    <TableColumn fx:id="staticTime" minWidth="0.0" prefWidth="88.0" text="开始统计时间" />
                   <TableColumn fx:id="sumZJ" minWidth="0.0" prefWidth="77.0" text="总战绩" />
@@ -59,10 +59,10 @@
                   <TableColumn fx:id="clubSumZJ" minWidth="0.0" prefWidth="86.0" text="总战绩" />
                   <TableColumn fx:id="clubSumBaoxian" minWidth="0.0" prefWidth="97.0" text="总保险" />
                   <TableColumn fx:id="clubSumPerson" minWidth="0.0" prefWidth="64.0" text="总人数" />
-                  <TableColumn fx:id="clubSumProfit" minWidth="0.0" prefWidth="84.0" text="总输赢" />
+                  <TableColumn fx:id="clubSumProfit" minWidth="0.0" prefWidth="84.0" text="总交收" />
                </columns>
             </TableView>
-            <HBox fx:id="LmBox" layoutX="482.0" layoutY="51.0" opacity="0.58" prefHeight="29.0" prefWidth="312.0" style="-fx-background-color: 00FF00;">
+            <HBox fx:id="LmBox" layoutX="617.0" layoutY="52.0" opacity="0.58" prefHeight="29.0" prefWidth="312.0" style="-fx-background-color: 00FF00;">
                <children>
                   <RadioButton fx:id="radioLM1" alignment="TOP_LEFT" layoutX="526.0" layoutY="50.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="104.0" text="联盟1">
                      <cursor>
