--- a/src/main/resources/dialog/team_proxy_tab_frame.fxml
+++ b/src/main/resources/dialog/team_proxy_tab_frame.fxml
@@ -36,7 +36,7 @@
                                        <Font name="System Bold" size="12.0" />
                                     </font>
                                  </Label>
-                                 <CheckBox fx:id="hasTeamBaoxian" layoutX="160.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="不显示保险">
+                                 <CheckBox fx:id="hasTeamBaoxian" layoutX="160.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="显示保险">
                                     <font>
                                        <Font size="14.0" />
                                     </font>
