--- a/src/main/resources/dialog/LM_Tab_Fram.fxml
+++ b/src/main/resources/dialog/LM_Tab_Fram.fxml
@@ -23,19 +23,59 @@
           <items>
              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="355.0">
                 <children>
-                   <Button layoutX="102.0" layoutY="382.0" mnemonicParsing="false" onAction="#updateClubAction" prefHeight="23.0" prefWidth="170.0" text="修改俱乐部额度" />
-                   <Label layoutX="26.0" layoutY="300.0" prefHeight="24.0" prefWidth="156.0" text="俱乐部操作区：" />
-                   <Button layoutX="102.0" layoutY="342.0" mnemonicParsing="false" onAction="#updateClubNameAction" prefHeight="23.0" prefWidth="171.0" text="修改俱乐部名称" />
-                   <Button layoutX="100.0" layoutY="521.0" mnemonicParsing="false" onAction="#exportSingleClubAction" prefHeight="23.0" prefWidth="170.0" text="导出当前俱乐部帐单" />
-                   <Button layoutX="99.0" layoutY="608.0" mnemonicParsing="false" onAction="#exportAllClubAction" prefHeight="23.0" prefWidth="170.0" text="导出所有俱乐部总帐单" />
-                   <Label layoutX="14.0" layoutY="478.0" prefHeight="24.0" prefWidth="156.0" text="       导出文件：" />
-                  <Button layoutX="102.0" layoutY="426.0" mnemonicParsing="false" onAction="#change_club_gudong_Action" prefHeight="23.0" prefWidth="170.0" text="修改俱乐部股东" />
-                  <Button layoutX="28.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM1_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟1" />
-                  <Button layoutX="118.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM2_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟2" />
-                  <Button layoutX="211.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM3_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟3" />
-                  <Button layoutX="98.0" layoutY="564.0" mnemonicParsing="false" onAction="#exportClubOneKeyAction" prefHeight="23.0" prefWidth="170.0" text="一键导出俱乐部帐单" />
-                  <Label layoutX="24.0" layoutY="128.0" prefHeight="24.0" prefWidth="136.0" text="导入白名单配置：" />
-                  <VBox layoutX="47.0" layoutY="165.0" spacing="10.0">
+                   <Button layoutX="102.0" layoutY="384.0" mnemonicParsing="false" onAction="#updateClubAction" prefHeight="23.0" prefWidth="170.0" text="修改俱乐部额度">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                   <Label layoutX="26.0" layoutY="302.0" prefHeight="24.0" prefWidth="156.0" text="俱乐部操作区：" />
+                   <Button layoutX="102.0" layoutY="344.0" mnemonicParsing="false" onAction="#updateClubNameAction" prefHeight="23.0" prefWidth="171.0" text="修改俱乐部名称">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                   <Button layoutX="100.0" layoutY="523.0" mnemonicParsing="false" onAction="#exportSingleClubAction" prefHeight="23.0" prefWidth="170.0" text="导出当前俱乐部帐单">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                   <Button layoutX="99.0" layoutY="610.0" mnemonicParsing="false" onAction="#exportAllClubAction" prefHeight="23.0" prefWidth="170.0" text="导出所有俱乐部总帐单">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                   <Label layoutX="14.0" layoutY="480.0" prefHeight="24.0" prefWidth="156.0" text="       导出文件：" />
+                  <Button layoutX="102.0" layoutY="428.0" mnemonicParsing="false" onAction="#change_club_gudong_Action" prefHeight="23.0" prefWidth="170.0" text="修改俱乐部股东">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <HBox fx:id="lmHbox" layoutX="27.0" layoutY="74.0" spacing="25.0">
+                     <children>
+                        <Button layoutX="27.0" layoutY="74.0" mnemonicParsing="false" onAction="#LM1_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟1">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button layoutX="117.0" layoutY="74.0" mnemonicParsing="false" onAction="#LM2_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟2">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button layoutX="210.0" layoutY="74.0" mnemonicParsing="false" onAction="#LM3_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟3">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <Button layoutX="98.0" layoutY="566.0" mnemonicParsing="false" onAction="#exportClubOneKeyAction" prefHeight="23.0" prefWidth="170.0" text="一键导出俱乐部帐单">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Label layoutX="24.0" layoutY="130.0" prefHeight="24.0" prefWidth="136.0" text="导入白名单配置：" />
+                  <VBox layoutX="47.0" layoutY="167.0" spacing="10.0">
                      <children>
                         <HBox layoutX="34.0" layoutY="153.0">
                            <children>
@@ -57,7 +97,53 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <JFXButton layoutX="138.0" layoutY="129.0" onAction="#saveLMConfigAction" text="点我保存" textFill="#2041ff" />
+                  <JFXButton layoutX="136.0" layoutY="131.0" onAction="#saveLMConfigAction" prefHeight="23.0" prefWidth="136.0" text="保存白名单配置" textFill="#6695e4">
+                     <font>
+                        <Font name="System Italic" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></JFXButton>
+                  <HBox fx:id="eduShareHBox" layoutX="35.0" layoutY="710.0" prefHeight="18.0" prefWidth="271.0">
+                     <children>
+                        <JFXCheckBox fx:id="eduShareLm1" checkedColor="#6698e3" layoutX="97.0" layoutY="132.0" prefHeight="18.0" prefWidth="93.0" text="联盟1">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </JFXCheckBox>
+                        <JFXCheckBox fx:id="eduShareLm2" checkedColor="#6698e3" layoutX="170.0" layoutY="132.0" prefHeight="18.0" prefWidth="97.0" text="联盟2">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </JFXCheckBox>
+                        <JFXCheckBox fx:id="eduShareLm3" checkedColor="#6698e3" layoutX="233.0" layoutY="132.0" prefHeight="18.0" prefWidth="70.0" text="联盟3">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </JFXCheckBox>
+                     </children>
+                  </HBox>
+                  <HBox layoutX="29.0" layoutY="669.0">
+                     <children>
+                        <Label layoutX="29.0" layoutY="669.0" prefHeight="24.0" prefWidth="95.0" text="额度共享设置：" />
+                        <JFXButton layoutX="141.0" layoutY="670.0" onAction="#saveEduShareAction" prefHeight="23.0" prefWidth="78.0" text="保存设置" textFill="#6695e4">
+                           <font>
+                              <Font name="System Italic" size="12.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </JFXButton>
+                        <JFXButton layoutX="119.0" layoutY="773.0" onAction="#viewEduShareInfoAction" prefHeight="23.0" prefWidth="90.0" text="查看详情" textFill="#6695e4">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="System Italic" size="12.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                  </HBox>
                 </children>
              </AnchorPane>
              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="783.0" prefWidth="897.0">
@@ -69,7 +155,10 @@
                                <Label layoutX="30.0" layoutY="87.0" prefHeight="24.0" prefWidth="64.0" text="合计桌费：" />
                                <ListView fx:id="clubListView" layoutX="30.0" layoutY="232.0" prefHeight="259.0" prefWidth="205.0" />
                                <Label layoutX="30.0" layoutY="199.0" prefHeight="24.0" prefWidth="175.0" text="单个俱乐部（点击获取信息）：" />
-                               <Button fx:id="allClubViewBtn" layoutX="31.0" layoutY="136.0" mnemonicParsing="false" onAction="#viewAllClubAction" prefHeight="23.0" prefWidth="185.0" text="查看所有俱乐部总帐单" />
+                               <Button fx:id="allClubViewBtn" layoutX="31.0" layoutY="136.0" mnemonicParsing="false" onAction="#viewAllClubAction" prefHeight="23.0" prefWidth="185.0" text="查看所有俱乐部总帐单">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></Button>
                               <ScrollPane layoutX="251.0" layoutY="17.0" prefHeight="839.0" prefViewportHeight="829.0" prefViewportWidth="668.0" prefWidth="695.0">
                                  <content>
                                     <AnchorPane fx:id="bigAnchorPane" prefHeight="830.0" prefWidth="683.0">
