--- a/src/main/resources/dialog/zj_static_tab_frame.fxml
+++ b/src/main/resources/dialog/zj_static_tab_frame.fxml
@@ -21,7 +21,7 @@
     <children>
        <AnchorPane layoutY="1.0" minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="1296.0">
           <children>
-            <TableView fx:id="tableClubStatic" layoutX="664.0" layoutY="31.0" prefHeight="683.0" prefWidth="427.0">
+            <TableView fx:id="tableClubStatic" layoutX="664.0" layoutY="31.0" prefHeight="703.0" prefWidth="427.0">
                <columns>
                   <TableColumn fx:id="clubName" prefWidth="115.0" text="俱乐部名称" />
                   <TableColumn fx:id="clubId" minWidth="0.0" prefWidth="114.0" text="俱乐部ID" />
@@ -29,7 +29,7 @@
                   <TableColumn fx:id="clubPersonCount" minWidth="0.0" prefWidth="63.0" text="人次" />
                </columns>
             </TableView>
-             <TableView fx:id="tableTeamStatic" layoutX="183.0" layoutY="107.0" prefHeight="601.0" prefWidth="437.0">
+             <TableView fx:id="tableTeamStatic" layoutX="183.0" layoutY="107.0" prefHeight="627.0" prefWidth="437.0">
                 <columns>
                    <TableColumn fx:id="teamClubId" prefWidth="102.0" text="所属俱乐部" />
                    <TableColumn fx:id="teamId" minWidth="0.0" prefWidth="111.0" text="团队ID" />
@@ -37,8 +37,37 @@
                   <TableColumn fx:id="teamPersonCount" minWidth="0.0" prefWidth="88.0" text="人次" />
                 </columns>
              </TableView>
-             <Label layoutX="86.0" layoutY="319.0" prefHeight="24.0" prefWidth="156.0" />
+            <HBox layoutX="183.0" layoutY="51.0" prefHeight="37.0" prefWidth="236.0">
+               <children>
+                   <Label layoutX="183.0" layoutY="58.0" prefHeight="38.0" prefWidth="97.0" text="刷新时间：">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="timeLabel" layoutX="282.0" layoutY="58.0" prefHeight="37.0" prefWidth="139.0" textFill="#e3ac39">
+                     <font>
+                        <Font size="28.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
             <SplitPane layoutX="19.0" layoutY="105.0" />
+            <JFXButton buttonType="RAISED" defaultButton="true" layoutX="547.0" layoutY="55.0" onAction="#exportTeamExcelAction" prefHeight="24.0" prefWidth="73.0" ripplerFill="#2e80eb" style="-fx-background-color: #F0F0F0;" text="导出" textFill="#7166e8">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </JFXButton>
+            <JFXButton buttonType="RAISED" defaultButton="true" layoutX="456.0" layoutY="55.0" onAction="#refreshAction" prefHeight="24.0" prefWidth="73.0" ripplerFill="#2e80eb" style="-fx-background-color: #F0F0F0;" text="刷新" textFill="#7166e8">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </JFXButton>
           </children>
        </AnchorPane>
     </children>
