--- a/src/main/resources/dialog/SM_Autos.fxml
+++ b/src/main/resources/dialog/SM_Autos.fxml
@@ -65,18 +65,19 @@
       </HBox>
       <TableView fx:id="tableSMAuto" layoutX="19.0" layoutY="244.0" prefHeight="588.0" prefWidth="954.0">
         <columns>
-          <TableColumn fx:id="smAutoDate" prefWidth="101.0" text="爬取时间" />
-            <TableColumn fx:id="smAutoPlayerId" prefWidth="108.0" text="玩家ID" />
-            <TableColumn fx:id="smAutoPlayerName" prefWidth="115.0" text="玩家名称" />
-            <TableColumn fx:id="smAutoPaiju" prefWidth="68.0" text="牌局" />
+          <TableColumn fx:id="smAutoDate" prefWidth="85.0" text="爬取时间" />
+            <TableColumn fx:id="smAutoTeamId" prefWidth="77.0" text="团队ID" />
+            <TableColumn fx:id="smAutoPlayerId" prefWidth="92.0" text="玩家ID" />
+            <TableColumn fx:id="smAutoPlayerName" prefWidth="113.0" text="玩家名称" />
+            <TableColumn fx:id="smAutoPaiju" prefWidth="71.0" text="牌局" />
             <TableColumn fx:id="smAutoApplyAccount" prefWidth="68.0" text="申请数量" />
-            <TableColumn fx:id="smAutoTeamTotalAvailabel" prefWidth="86.0" text="团队可上码" />
-            <TableColumn fx:id="smAutoAvailabel" prefWidth="82.0" text="计算可上码" />
-            <TableColumn fx:id="smAutoIsTeamAvailabel" prefWidth="61.0" text="勾选团队" />
-            <TableColumn fx:id="smAutoIsCurrentDay" prefWidth="61.0" text="当天" />
-            <TableColumn fx:id="smAutoIsNextDay" prefWidth="50.0" text="次日" />
-            <TableColumn fx:id="smAutoIsAgree" prefWidth="67.0" text="同意审核" />
-            <TableColumn fx:id="smAutoIsAgreeSuccess" prefWidth="69.0" text="审核结果" />
+            <TableColumn fx:id="smAutoTeamTotalAvailabel" prefWidth="78.0" text="团队可上码" />
+            <TableColumn fx:id="smAutoAvailabel" prefWidth="83.0" text="计算可上码" />
+            <TableColumn fx:id="smAutoIsTeamAvailabel" prefWidth="58.0" text="勾选团队" />
+            <TableColumn fx:id="smAutoIsCurrentDay" prefWidth="42.0" text="当天" />
+            <TableColumn fx:id="smAutoIsNextDay" prefWidth="45.0" text="次日" />
+            <TableColumn fx:id="smAutoIsAgree" prefWidth="60.0" text="同意审核" />
+            <TableColumn fx:id="smAutoIsAgreeSuccess" prefWidth="59.0" text="审核结果" />
         </columns>
       </TableView>
       <ListView fx:id="logArea" layoutX="985.0" layoutY="36.0" prefHeight="359.0" prefWidth="294.0" />
