--- a/src/main/resources/dialog/login.fxml
+++ b/src/main/resources/dialog/login.fxml
@@ -35,12 +35,12 @@
                               <Image url="@/dialog/User.png" />
                            </image>
                         </ImageView>
-                        <JFXTextField labelFloat="true" layoutX="75.0" layoutY="116.0" maxWidth="316.0" minWidth="233.0" prefHeight="41.0" prefWidth="316.0" promptText="帐号">
+                        <JFXTextField fx:id="enNameField" labelFloat="true" layoutX="75.0" layoutY="116.0" maxWidth="316.0" minWidth="233.0" prefHeight="41.0" prefWidth="316.0" promptText="帐号">
                            <font>
                               <Font name="Roboto Medium" size="14.0" />
                            </font>
                         </JFXTextField>
-                        <JFXPasswordField labelFloat="true" layoutX="75.0" layoutY="191.0" maxWidth="316.0" minWidth="235.0" prefHeight="41.0" prefWidth="316.0" promptText="密码">
+                        <JFXPasswordField fx:id="codeField" labelFloat="true" layoutX="75.0" layoutY="191.0" maxWidth="316.0" minWidth="235.0" prefHeight="41.0" prefWidth="316.0" promptText="密码">
                            <font>
                               <Font name="Roboto Medium" size="14.0" />
                            </font>
