--- a/src/main/resources/dialog/SM_Autos.fxml
+++ b/src/main/resources/dialog/SM_Autos.fxml
@@ -30,13 +30,13 @@
          </children>
       </HBox>
       <Label layoutX="43.0" layoutY="139.0" prefHeight="26.0" prefWidth="88.0" text="Token内容：" />
-      <TextArea fx:id="tokenArea" layoutX="126.0" layoutY="145.0" maxWidth="-Infinity" prefHeight="44.0" prefWidth="841.0" />
+      <TextArea fx:id="tokenArea" layoutX="126.0" layoutY="145.0" maxWidth="-Infinity" prefHeight="44.0" prefWidth="833.0" />
       <HBox layoutX="19.0" layoutY="199.0" prefHeight="35.0" prefWidth="934.0" spacing="30.0">
          <children>
             <Button layoutX="47.0" layoutY="198.0" mnemonicParsing="false" onAction="#startSpiderAction" prefHeight="35.0" prefWidth="158.0" text="开始爬取后台数据" />
             <Button layoutX="226.0" layoutY="198.0" mnemonicParsing="false" onAction="#stopSpiderAction" prefHeight="35.0" prefWidth="158.0" text="停止爬取" />
             <Button layoutX="669.0" layoutY="198.0" mnemonicParsing="false" onAction="#clearTableDataAction" prefHeight="35.0" prefWidth="77.0" text="清空表数据" />
-            <Button mnemonicParsing="false" onAction="#exportSMAction" prefHeight="35.0" prefWidth="147.0" text="导出有上码的记录" />
+            <Button mnemonicParsing="false" onAction="#exportSMAction" prefHeight="35.0" prefWidth="106.0" text="导出成功购买" />
             <HBox prefHeight="35.0" prefWidth="272.0">
                <children>
                   <Label prefHeight="35.0" prefWidth="30.0" text="每隔" />
@@ -63,21 +63,18 @@
             <TextField fx:id="sysCodeField" prefHeight="23.0" prefWidth="67.0" text="UTF-8" />
          </children>
       </HBox>
-      <TableView fx:id="tableSMAuto" layoutX="19.0" layoutY="244.0" prefHeight="588.0" prefWidth="954.0">
+      <TableView fx:id="tableSMAuto" layoutX="19.0" layoutY="244.0" prefHeight="588.0" prefWidth="941.0">
         <columns>
-          <TableColumn fx:id="smAutoDate" prefWidth="85.0" text="爬取时间" />
-            <TableColumn fx:id="smAutoTeamId" prefWidth="77.0" text="团队ID" />
-            <TableColumn fx:id="smAutoPlayerId" prefWidth="92.0" text="玩家ID" />
-            <TableColumn fx:id="smAutoPlayerName" prefWidth="113.0" text="玩家名称" />
-            <TableColumn fx:id="smAutoPaiju" prefWidth="71.0" text="牌局" />
-            <TableColumn fx:id="smAutoApplyAccount" prefWidth="68.0" text="申请数量" />
-            <TableColumn fx:id="smAutoTeamTotalAvailabel" prefWidth="78.0" text="团队可上码" />
-            <TableColumn fx:id="smAutoAvailabel" prefWidth="83.0" text="计算可上码" />
-            <TableColumn fx:id="smAutoIsTeamAvailabel" prefWidth="58.0" text="勾选团队" />
-            <TableColumn fx:id="smAutoIsCurrentDay" prefWidth="42.0" text="当天" />
-            <TableColumn fx:id="smAutoIsNextDay" prefWidth="45.0" text="次日" />
-            <TableColumn fx:id="smAutoIsAgree" prefWidth="60.0" text="同意审核" />
-            <TableColumn fx:id="smAutoIsAgreeSuccess" prefWidth="59.0" text="审核结果" />
+          <TableColumn fx:id="smAutoDate" prefWidth="73.0" text="爬取时间" />
+            <TableColumn fx:id="smAutoTeamId" prefWidth="94.0" text="团队ID" />
+            <TableColumn fx:id="smAutoPlayerId" prefWidth="114.0" text="玩家ID" />
+            <TableColumn fx:id="smAutoPlayerName" prefWidth="112.0" text="玩家名称" />
+            <TableColumn fx:id="smAutoApplyAccount" prefWidth="74.0" text="申请数量" />
+            <TableColumn fx:id="smAutoCurrentMoney" text="实时金额" />
+            <TableColumn fx:id="smAutoAvailabelEdu" prefWidth="86.0" text="可用额度" />
+            <TableColumn fx:id="smAutoIsAgree" prefWidth="74.0" text="同意购买" />
+            <TableColumn fx:id="smAutoIsAgreeSuccess" prefWidth="81.0" text="购买结果" />
+            <TableColumn fx:id="smAutoIsAgreeSuccess1" prefWidth="137.0" text="备注" />
         </columns>
       </TableView>
       <ListView fx:id="logArea" layoutX="985.0" layoutY="36.0" prefHeight="359.0" prefWidth="294.0" />
@@ -85,7 +82,7 @@
       <Label layoutX="985.0" layoutY="12.0" prefHeight="26.0" prefWidth="164.0" text="爬取临时记录：（自动上码）" textFill="#a48383" />
       <HBox layoutX="43.0" layoutY="68.0" prefHeight="26.0" prefWidth="925.0">
          <children>
-            <Label layoutX="43.0" layoutY="87.0" prefHeight="26.0" prefWidth="85.0" text="只上码以下ID：" />
+            <Label layoutX="43.0" layoutY="87.0" prefHeight="26.0" prefWidth="85.0" text="只购买以下ID：" />
             <TextField fx:id="filterPlayIdFields" prefHeight="28.0" prefWidth="513.0" promptText="输入玩家ID，以##隔开，若无填写，则所有申请通过的玩家都会上码！！" text="2162968366##2162813955##2162971465##2162864256##2162932597##2162892097" />
             <Label prefHeight="26.0" prefWidth="11.0" text="   " />
             <Button mnemonicParsing="false" onAction="#load6PlayerIdsAction" prefHeight="23.0" prefWidth="75.0" text="加载6个人" />
