--- a/src/main/resources/dialog/SM_Autos.fxml
+++ b/src/main/resources/dialog/SM_Autos.fxml
@@ -74,7 +74,7 @@
             <TableColumn fx:id="smAutoAvailabelEdu" prefWidth="86.0" text="可用额度" />
             <TableColumn fx:id="smAutoIsAgree" prefWidth="74.0" text="同意购买" />
             <TableColumn fx:id="smAutoIsAgreeSuccess" prefWidth="81.0" text="购买结果" />
-            <TableColumn fx:id="smAutoIsAgreeSuccess1" prefWidth="137.0" text="备注" />
+            <TableColumn fx:id="smAutoFailDescription" prefWidth="137.0" text="备注" />
         </columns>
       </TableView>
       <ListView fx:id="logArea" layoutX="985.0" layoutY="36.0" prefHeight="359.0" prefWidth="294.0" />
