--- a/src/main/resources/dialog/add_new_player_frame.fxml
+++ b/src/main/resources/dialog/add_new_player_frame.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="345.0" prefWidth="340.0" vgap="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.AddController">
+<GridPane hgap="14.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="441.0" prefWidth="340.0" vgap="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.AddController">
   <children>
     <VBox maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" prefHeight="190.0" prefWidth="298.0" spacing="7.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
       <children>
@@ -43,7 +43,19 @@
                   <Font size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="beizhuField" prefHeight="23.0" prefWidth="230.0" />
+            <TextField fx:id="beizhuField" prefHeight="23.0" prefWidth="230.0" text="0" />
+            <Label fx:id="detailsLabel1111" prefHeight="15.0" prefWidth="45.0" text="抽水" textAlignment="LEFT" wrapText="true">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="choushuiField" prefHeight="23.0" prefWidth="230.0" text="5%" />
+            <Label fx:id="detailsLabel11111" prefHeight="15.0" prefWidth="45.0" text="回水" textAlignment="LEFT" wrapText="true">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="huishuiField" prefHeight="23.0" prefWidth="230.0" text="0%" />
       </children>
     </VBox>
     <HBox maxHeight="-Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" GridPane.columnIndex="1" GridPane.rowIndex="1">
