--- a/src/main/resources/dialog/add_new_player_frame.fxml
+++ b/src/main/resources/dialog/add_new_player_frame.fxml
@@ -44,13 +44,13 @@
                </font>
             </Label>
             <TextField fx:id="beizhuField" prefHeight="23.0" prefWidth="230.0" text="0" />
-            <Label fx:id="detailsLabel1111" prefHeight="15.0" prefWidth="45.0" text="抽水" textAlignment="LEFT" wrapText="true">
+            <Label fx:id="detailsLabel1111" prefHeight="15.0" prefWidth="82.0" text="个人回保" textAlignment="LEFT" wrapText="true">
                <font>
                   <Font size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="choushuiField" prefHeight="23.0" prefWidth="230.0" text="5%" />
-            <Label fx:id="detailsLabel11111" prefHeight="15.0" prefWidth="45.0" text="回水" textAlignment="LEFT" wrapText="true">
+            <TextField fx:id="huibaoField" prefHeight="23.0" prefWidth="230.0" text="0%" />
+            <Label fx:id="detailsLabel11111" prefHeight="15.0" prefWidth="77.0" text="个人回水" textAlignment="LEFT" wrapText="true">
                <font>
                   <Font size="12.0" />
                </font>
